objects/zqu__ProductOptionGroup__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Max_Option__c</fullName>
        <label>Max Option</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Min_Option__c</fullName>
        <label>Min Option</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Origin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field should be auto populate when generating a snapshot. It&apos;s link to the original object.</description>
        <label>Original Option</label>
        <referenceTo>zqu__ProductOptionGroup__c</referenceTo>
        <relationshipLabel>Product Option Groups</relationshipLabel>
        <relationshipName>ProductOptionGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Option Groups</relationshipLabel>
        <relationshipName>ProductOptionGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RootProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field identifies the top level product containing this product option group.</description>
        <label>Root Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Option Groups (Root Product)</relationshipLabel>
        <relationshipName>RootProductOptionGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RootQrpId__c</fullName>
        <description>The unique ID corresponding to the root bundle that a snapshotted product option group belongs to.</description>
        <inlineHelpText>The unique ID corresponding to the root bundle that a snapshotted product option group belongs to.</inlineHelpText>
        <label>Root Quote Rate Plan ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RootQuote__c</fullName>
        <description>The unique ID determining which quote a snapshotted Product Option Group belongs to.</description>
        <inlineHelpText>The unique ID determining which quote a snapshotted Product Option Group belongs to.</inlineHelpText>
        <label>Quote</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Product Option Group</label>
    <nameField>
        <label>Product Option Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Option Groups</pluralLabel>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Snapshot</fullName>
        <active>true</active>
        <label>Snapshot</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>zqu__Max_Option_Rule</fullName>
        <active>true</active>
        <description>Max Option cannot be less than 0</description>
        <errorConditionFormula>AND( NOT( ISNULL(zqu__Max_Option__c) ) ,
      zqu__Max_Option__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>zqu__Max_Option__c</errorDisplayField>
        <errorMessage>Max Option cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Min_Option_Less_Than_Max</fullName>
        <active>true</active>
        <description>Min Option should be less than Max Option</description>
        <errorConditionFormula>AND( NOT( ISNULL( zqu__Min_Option__c ) ) ,
     NOT( ISNULL( zqu__Max_Option__c ) ) ,
     zqu__Min_Option__c  &gt; zqu__Max_Option__c )</errorConditionFormula>
        <errorDisplayField>zqu__Min_Option__c</errorDisplayField>
        <errorMessage>Min Option should be equal or less  than Max Option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Min_Option_Rule</fullName>
        <active>true</active>
        <description>Min Option cannot be less than 0</description>
        <errorConditionFormula>AND( NOT( ISNULL( zqu__Min_Option__c ) ) ,
      zqu__Min_Option__c  &lt; 0)</errorConditionFormula>
        <errorDisplayField>zqu__Min_Option__c</errorDisplayField>
        <errorMessage>Min Option cannot be less than 0</errorMessage>
    </validationRules>
</CustomObject>